# PlayBookApi

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  manage.py  pyproject.toml  start.sh
PlayBookApi/: asgi.py  celery.py  dashboard.py  environment.py  health.py  security.py  settings.py  urls.py  views.py  wsgi.py
PlayBookApi/config/: __init__.py  api_key.py  cache.py  celery.py  channels.py  cors.py  jwt.py  password_reset.py  rest_framework.py  spectacular.py  unfold.py
PlayBookApi/utils/: mixins.py
PlayBookApi/utils/models/: __init__.py
accounts/: urls.py
accounts/admin/: __init__.py  profile.py
accounts/api/v1/endpoints/: account.py  (+2 more)
accounts/models/: __init__.py  choices.py  profile.py
accounts/social/: apple.py  google.py  shared.py
compliance/: middleware.py
compliance/admin/: __init__.py
compliance/models/: __init__.py  audit_log.py
follows/: admin.py  urls.py
follows/models/: __init__.py  followed_league.py  followed_sport.py  followed_strategy.py  saved_prediction.py
markets/: client.py  consumers.py  persistence.py  routing.py  tasks.py  urls.py
markets/admin/: __init__.py
markets/models/: __init__.py  bookmaker.py  event.py  league.py  odds_snapshot.py  sport.py  team.py
notifications/: admin.py  tasks.py  urls.py
notifications/models/: __init__.py  device_token.py  notification_log.py
notifications/services/: fcm.py
predictions/: apps.py  signals.py  tasks.py  urls.py
predictions/admin/: __init__.py
predictions/models/: __init__.py  feature_vector.py  prediction.py  strategy.py
predictions/services/: feature_builder.py  llm_explainer.py
predictions/strategies/: __init__.py  base.py  form_streak.py  llm_only.py  totals_consensus.py  value_bet.py
(+14 files in other folders)
